<resources>
    <string name="app_name">RateStation</string>
    <string name="bienvenido_a_ratestation">Bienvenido a RateStation</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="create_account_button_text">Crear cuenta</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Entrar">Entrar</string>
    <string name="forgot_password_link">¿Olvidaste tu contraseña?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_description">Imagen del póster de la película</string>
    <string name="peliculas_m_s_valoradas">Peliculas más valoradas</string>
    <string name="favoritas">Favoritas</string>
    <string name="inicio_de_sesi_n_exitoso">Inicio de sesión exitoso</string>
    <string name="tus_peliculas_favoritas">Tus películas favoritas</string>
    <string name="tus_series_favoritas">Tus series favoritas</string>
    <string name="tus_juegos_favoritos">Tus juegos favoritos</string>


</resources>
