<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#121212"
    android:padding="24dp">

    <TextView
        android:id="@+id/registerTitle"
        android:text="@string/bienvenido_a_ratestation"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#03DAC6"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button_text"
        android:backgroundTint="#BB86FC"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>