<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ratestation.Fragments.FragmentUserEspacio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <!-- Sección Películas -->
        <TextView
            android:id="@+id/txtPeliculasFavoritas"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tus_peliculas_favoritas"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPeliculasFavoritas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            tools:orientation="horizontal"/>

        <!-- Sección Series -->
        <TextView
            android:id="@+id/txtSeriesFavoritas"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tus_series_favoritas"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSeriesFavoritas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            tools:orientation="horizontal"/>

        <!-- Sección Juegos -->
        <TextView
            android:id="@+id/txtJuegosFavoritos"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tus_juegos_favoritos"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerJuegosFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            tools:orientation="horizontal"/>

    </LinearLayout>
</ScrollView>
